# sweethome3d-textures-ambientcg

./: .gitattributes  .gitignore  README.jinga  README.jinja  README.md  VERSION  build.py  catalog_header.txt  excluded_categories.py  make_preview.py  publish.py  pyproject.toml  requirements.txt
